Add shared values service

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
@@ -47,5 +46,6 @@
 
     <!-- Services -->
     <script src="views/homepage/homepage.service.js"></script>
+    <script src="views/data/shared.service.js"></script>
 </body>
 </html>
